--- a/index.html
+++ b/index.html
@@ -15,43 +15,128 @@
 
 <body>
     <header class="header">
-        <div class="container">
-            <div class="header_body">
-                <a href="">
-                    <img src="img/logo.svg" alt="Логотип кино онлайн">
-                </a>
-                <nav class="nav">
-                    <ul class="menu">
-                        <li class="menu_item">
-                            <a href="" class="menu_link">
-                                Главная
-                            </a>
-                        </li>
-                        <li class="menu_item">
-                            <a href="" class="menu_link">
-                                Фильмы
-                            </a>
-                        </li>
-                        <li class="menu_item">
-                            <a href="" class="menu_link">
-                                Кинотеатры
-                            </a>
-                        </li>
-                        <li class="menu_item">
-                            <a href="" class="menu_link">
-                                События
-                            </a>
-                        </li>
-                        <li class="menu_item">
-                            <a href="" class="menu_link">
-                                Поддержка
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="user">
-                    <span>Привет Мила</span>
-                    <img src="img/ava.png" alt="Мила" class="ava">
+        <div class="navbar">
+            <div class="container">
+                <div class="header_body">
+                    <a href="">
+                        <img src="img/logo.svg" alt="Логотип кино онлайн">
+                    </a>
+                    <nav class="nav">
+                        <ul class="menu">
+                            <li class="menu_item">
+                                <a href="" class="menu_link">
+                                    Главная
+                                </a>
+                            </li>
+                            <li class="menu_item">
+                                <a href="" class="menu_link">
+                                    Фильмы
+                                </a>
+                            </li>
+                            <li class="menu_item">
+                                <a href="" class="menu_link">
+                                    Кинотеатры
+                                </a>
+                            </li>
+                            <li class="menu_item">
+                                <a href="" class="menu_link">
+                                    События
+                                </a>
+                            </li>
+                            <li class="menu_item">
+                                <a href="" class="menu_link">
+                                    Поддержка
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="user">
+                        <span>Привет Мила</span>
+                        <img src="img/ava.png" alt="Мила" class="ava">
+                    </div>
+                </div>
+                <div class="film">
+                    <div class="film_info">
+                        <small class="film_subtitle">
+                            Avengers: Infinity War
+                        </small>
+                        <h1 class="film_title">
+                            Мстители: война бесконечности
+                        </h1>
+                        <div class="film_text">
+                            Пока Мстители и их союзники продолжают защищать мир от различных опасностей, с которыми не смог бы справиться один супергерой, новая угроза возникает из космоса: Танос. Межгалактический тиран преследует цель собрать все шесть Камней Бесконечности - артефакты невероятной силы, с помощью которых можно менять реальность по своему желанию. Всё, с чем Мстители сталкивались ранее, вело к этому моменту – судьба Земли никогда ещё не была столь неопределённой.
+                        </div>
+                        <div class="film_details">
+                            <div class="time">
+                                <img src="img/clock 1.svg" alt="clock" class="time_icon">
+                                <span class="time_counter">
+                                    240 мин.
+                                </span>
+                            </div>
+                            <div class="raiting">
+                                <img src="img/imdb.png" alt="" class="raiting_icon">
+                                <span class="raiting_counter">
+                                    <strong class="srong">9.2</strong>/10
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#" class="film_trailer">
+                        <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="50" cy="50" r="50" fill="white"/>
+                            <g clip-path="url(#clip0)">
+                            <path d="M43.0758 30.0033C39.3071 27.8416 36.2518 29.6125 36.2518 33.9556V66.0059C36.2518 70.3533 39.3071 72.1219 43.0758 69.9623L71.0893 53.8967C74.8592 51.7342 74.8592 48.2306 71.0893 46.0686L43.0758 30.0033Z" fill="#F20D01"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0">
+                            <rect width="41.8013" height="41.8013" fill="white" transform="translate(34.1837 29.0816)"/>
+                            </clipPath>
+                            </defs>
+                            </svg>                            
+                    </a>
+                </div>
+                <div class="session">
+                    <div class="session_date">
+                        <span class="session_label">Дата</span>
+                        <div class="date_block">
+                            <div class="session_item">
+                                <span class="session_month">Апрель</span>
+                                <span class=" session_day">27</span>
+                                <span class=" session_week">пт</span>
+                            </div>
+                            <div class="session_item">
+                                <span class="session_month">Апрель</span>
+                                <span class=" session_day">28</span>
+                                <span class=" session_week">сб</span>
+                            </div>
+                            <div class="session_item">
+                                <span class="session_month">Апрель</span>
+                                <span class=" session_day">29</span>
+                                <span class=" session_week">вс</span>
+                            </div>
+                            <div class="session_item">
+                                <span class="session_month">Апрель</span>
+                                <span class=" session_day">30</span>
+                                <span class=" session_week">пн</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="session_cinema">
+                        <span class="session_label">Кинотеатр</span>
+                        <select class="select_cinema select" name="cinema" id="">
+                            <option value="Октябрь, ул. Калужская 28">Октябрь, ул. Калужская 28</option>
+                            <option value="Cinema pro Ld hiled, Ленина 26">Cinema pro Ld hiled, Ленина 26</option>
+                            <option value="Путевочка, Троян 17">Путевочка, Троян 17</option>
+                        </select>
+                    </div>
+                    <div class="session_time">
+                        <span class="session_label">Время</span>
+                        <select class="select_time select" name="cinema" id="">
+                            <option value="12:00">12:00</option>
+                            <option value="16:45">16:45</option>
+                            <option value="19:00">19:00</option>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
