--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
                         <img src="img/logo.svg" alt="Логотип кино онлайн">
                     </a>
                     <nav class="nav">
+                        <button class="hamburger">
+                            <svg width="16" height="7" viewBox="0 0 16 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <line x1="0.598906" y1="6.1684" x2="15.5882" y2="6.09608" stroke="white"/>
+                                <line x1="0.598906" y1="0.635687" x2="15.5882" y2="0.563367" stroke="white"/>
+                                <line x1="0.598906" y1="3.55573" x2="15.5882" y2="3.48341" stroke="white"/>
+                                </svg>                                
+                        </button>
                         <ul class="menu">
                             <li class="menu_item">
                                 <a href="" class="menu_link">
@@ -125,17 +132,17 @@
                     <div class="session_cinema">
                         <span class="session_label">Кинотеатр</span>
                         <select class="select_cinema select" name="cinema" id="">
-                            <option value="Октябрь, ул. Калужская 28">Октябрь, ул. Калужская 28</option>
-                            <option value="Cinema pro Ld hiled, Ленина 26">Cinema pro Ld hiled, Ленина 26</option>
-                            <option value="Путевочка, Троян 17">Путевочка, Троян 17</option>
+                            <option class="option" value="Октябрь, ул. Калужская 28">Октябрь, ул. Калужская 28</option>
+                            <option class="option" value="Cinema pro Ld hiled, Ленина 26">Cinema pro Ld hiled, Ленина 26</option>
+                            <option class="option" value="Путевочка, Троян 17">Путевочка, Троян 17</option>
                         </select>
                     </div>
                     <div class="session_time">
                         <span class="session_label">Время</span>
                         <select class="select_time select" name="cinema" id="">
-                            <option value="12:00">12:00</option>
-                            <option value="16:45">16:45</option>
-                            <option value="19:00">19:00</option>
+                            <option class="option" value="12:00">12:00</option>
+                            <option class="option" value="16:45">16:45</option>
+                            <option class="option" value="19:00">19:00</option>
                         </select>
                     </div>
                 </div>
@@ -145,7 +152,7 @@
     <section class="sheme">
         <div class="container">
             <div class="sheme_body">
-            <svg class="sheme-svg" width="1170" height="600" viewBox="0 0 1170 686" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="sheme-svg"  viewBox="0 0 1170 686" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path class="light" d="M128 115L201.04 48H968.96L1042 115H128Z" fill="url(#paint0_linear)"/>
                 <line x1="76" y1="43" x2="1094" y2="43" stroke="black" stroke-opacity="0.39" stroke-width="10"/>
                 <path d="M140.5 135C137.186 135 134.5 137.686 134.5 141V154C134.5 157.314 137.186 160 140.5 160H156.5C159.814 160 162.5 157.314 162.5 154V141C162.5 137.686 159.814 135 156.5 135H140.5Z"/>
